background-image flicker fixed

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,7 +1,7 @@
 body {
     background: url('/images/homeback.jpg');
 
-	font: 11px Arial, Helvetica, sans-serif;
+	font: 16em/1 Arial;
 	-moz-background-size: cover;
 	-webkit-background-size: cover;
 	background-size: cover;
@@ -10,6 +10,7 @@ body {
 	background-attachment: fixed;
 	padding: 0;
 	margin: 0;
+    height: 100%;
 }
 img {
 	border: none;
@@ -51,4 +52,54 @@ a.dock-item2 {
 	margin: 5px 10px 0px; 
 	width: 100%;
 
+}
+.text--line {
+    font-size: .5em;
+}
+svg {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+.text-copy {
+    fill: none;
+    stroke: white;
+    stroke-dasharray: 7% 28%;
+    stroke-width: 3px;
+    -webkit-animation: stroke-offset 15s infinite linear;
+    animation: stroke-offset 7s infinite linear;
+}
+.text-copy:nth-child(1) {
+    stroke: #360745;
+    stroke-dashoffset: 7%;
+}
+.text-copy:nth-child(2) {
+    stroke: #D61C59;
+    stroke-dashoffset: 14%;
+}
+.text-copy:nth-child(3) {
+    stroke: #E7D84B;
+    stroke-dashoffset: 21%;
+}
+.text-copy:nth-child(4) {
+    stroke: #EFEAC5;
+    stroke-dashoffset: 28%;
+}
+.text-copy:nth-child(5) {
+    stroke: #1B8798;
+    stroke-dashoffset: 35%;
+}
+
+@-webkit-keyframes stroke-offset {
+    50% {
+        stroke-dashoffset: 35%;
+        stroke-dasharray: 0 87.5%;
+    }
+}
+
+@keyframes stroke-offset {
+    50% {
+        stroke-dashoffset: 35%;
+        stroke-dasharray: 0 87.5%;
+    }
 }
